# ai-code-agent

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.streamlit  README.md  app.py  config.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
.streamlit/: config.toml
agent/: core.py  parser.py  prompt.py
memory/: chat_memory.py  vector_store.py
tests/: test_config.py  test_memory.py  test_tools.py
tools/: code_search.py  explain_function.py  file_reader.py  file_writer.py  git_ops.py  grep_code.py  list_files.py  run_command.py
utils/: logger.py
