[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_code_agent"
version = "1.0.0"
description = "CLI-based AI codebase assistant using Groq API with RAG and tool-calling"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.15.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.scripts]
ai-agent = "main:app"

[tool.hatch.build.targets.wheel]
packages = [
    "agent",
    "tools",
    "memory",
    "utils",
]
only-include = [
    "main.py",
    "config.py",
    "agent",
    "tools",
    "memory",
    "utils",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
